1️⃣ Added a Delete Button to the Health Records List
Modified ListTile to include both edit and delete buttons.

2️⃣ Implemented File Upload for Health Records

Added a FloatingActionButton for users to upload files.

Integrated file_picker to let users select a file.

Prompted users to assign a category before saving.

Stored file details in SharedPreferences for persistence.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,3 +2,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.2  # Add this package
+
+#new dependancy
+ dependencies:
+  shared_preferences: ^2.2.2
